# understanding-rust-from-python

./: .gitignore  AGENTS.md  README.md  SETUP.md  STATE.md  learn-rust.qmd  learn-rust.quarto_ipynb  learn-rust.quarto_ipynb_1  pyproject.toml
.ipynb_checkpoints/: learn-rust-checkpoint.qmd
docs/: speed_up_your_Python_with_Rust.md
learn-rust_files/libs/bootstrap/: bootstrap-570db841bd7dd7d2589805c1494053ae.min.css
notes/: 01_hello-quickref.md  01_hello.md  01_hello.qmd  02_vars-quickref.md  02_vars.md  02_vars.qmd  03_functions-quickref.md  03_functions.md  03_functions.qmd  04_if_else-quickref.md  04_if_else.qmd  05_loops-quickref.md  05_loops.qmd  06_ownership-quickref.md  06_ownership.qmd  07_structs_enums-quickref.md  07_structs_enums.qmd  08_error_handling-quickref.md  08_error_handling.qmd  running-rust.md  running-rust.qmd
playground/: Cargo.toml
python/: 01_hello.py  02_vars.py  03_functions.py  04_if_else.py  05_loops.py  06_ownership.py  07_structs_enums.py  08_error_handling.py
rust/: 01_hello.rs  03_functions.rs  04_if_else.rs  05_loops.rs  06_ownership.rs  07_structs_enums.rs  08_error_handling.rs
