[package]
name = "playground"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "01_hello"
path = "src/bin/01_hello.rs"

[[bin]]
name = "02_vars"
path = "src/bin/02_vars.rs"

[[bin]]
name = "03_functions"
path = "src/bin/03_functions.rs"

[[bin]]
name = "04_if_else"
path = "src/bin/04_if_else.rs"

[[bin]]
name = "05_loops"
path = "src/bin/05_loops.rs"

[[bin]]
name = "06_ownership"
path = "src/bin/06_ownership.rs"

[[bin]]
name = "07_structs_enums"
path = "src/bin/07_structs_enums.rs"
